--- a/serverClientA/src/main/resources/application.properties
+++ b/serverClientA/src/main/resources/application.properties
@@ -11,7 +11,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:1112/eureka/
 spring.cloud.config.discovery.enabled=true
 #\u53D1\u73B0\u7684\u670D\u52A1\u7684\u540D\u5B57--\u5BF9\u5E94\u6CE8\u6D4B\u4E2D\u5FC3\u7684\u670D\u52A1\u540D\u5B57
 spring.cloud.config.discovery.serviceId=eureka-server
-#thymelea
+#Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
@@ -24,6 +24,7 @@ spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 server.tomcat.uri-encoding=UTF-8
-
-#feign\u914D\u7F6E
+#\u542F\u7528Feign
 feign.hystrix.enabled=true
+#\u6307\u5411 zipkin server\u670D\u52A1\u5730\u5740\u3002
+spring.zipkin.base-url=http://localhost:2226/
